VFS-5151 fixed service version string truncating

--- a/app/styles/onedata-gui-common/components/brand-info.scss
+++ b/app/styles/onedata-gui-common/components/brand-info.scss
@@ -32,5 +32,6 @@
     font-size: 90%;
     margin-top: 2px;
     margin-bottom: -2px;
+    white-space: nowrap;
   }
 }
